core/force-app/main/default/objects/NotificationProvider__c/NotificationProvider__c.object-meta.xml
<CustomObject>
    <label>Notification Provider</label>
    <nameField>
        <label>Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>