core/force-app/main/default/objects/NotificationProvider__c/fields/ApexAdapter__c.field-meta.xml
<CustomField>
    <fullName>ApexAdapter__c</fullName>
    <description>Apex Adapter of the Service Provider</description>
    <label>Apex Adapter</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>