core/force-app/main/default/objects/NotificationProvider__c/fields/ApexArgs__c.field-meta.xml
<CustomField>
    <fullName>ApexArgs__c</fullName>
    <description>Apex Arguments of the Service Provider</description>
    <label>Apex Args</label>
    <length>255</length>
    <type>Text</type>
</CustomField>