core/force-app/main/default/objects/NotificationProvider__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Reference of the Service Provider</description>
    <label>Reference</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>