core/force-app/main/default/objects/NotificationProvider__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Scope</description>
    <label>Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>